--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -1,3 +1,4 @@
+#Aquí definimos el puerto y el nombre del servicio que Eureka buscará al ir a la URL http://servicio-cursos/cursos
 server:
   port: 8080
 
@@ -13,4 +14,5 @@ eureka:
 #    fetch-registry: false
 #    enabled: true
 #    jersey:
+
 #      enabled: false
