--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -6,10 +6,11 @@ zuul:
   routes:
     servicio-cursos:
       path: /cursos/**
-      serviceId: servicio-cursos
+      serviceId: http://localhost:8080
  
 eureka:
   client:
     serviceUrl:
 
       defaultZone: http://localhost:8761/eureka
+
